--- a/Bitrise/View/Base.lproj/Main.storyboard
+++ b/Bitrise/View/Base.lproj/Main.storyboard
@@ -1210,7 +1210,7 @@
                         </connections>
                     </window>
                     <connections>
-                        <segue destination="xqt-If-8UY" kind="relationship" relationship="window.shadowedContentViewController" id="PZ4-g3-sj8"/>
+                        <segue destination="r4X-Sj-tTu" kind="relationship" relationship="window.shadowedContentViewController" id="Bsd-Vu-p7c"/>
                     </connections>
                 </windowController>
                 <customObject id="82d-mv-VxY" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
@@ -1261,7 +1261,99 @@
                 </viewController>
                 <customObject id="M4y-gM-Wf4" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="107" y="1456"/>
+            <point key="canvasLocation" x="471" y="1505"/>
+        </scene>
+        <!--Logs View Controller-->
+        <scene sceneID="QIC-cz-Vx4">
+            <objects>
+                <viewController id="r4X-Sj-tTu" customClass="BRLogsViewController" sceneMemberID="viewController">
+                    <view key="view" id="uBh-rD-vMz">
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uSn-6V-p9R">
+                                <rect key="frame" x="20" y="20" width="410" height="260"/>
+                                <clipView key="contentView" id="YGr-M6-9mp">
+                                    <rect key="frame" x="1" y="0.0" width="408" height="259"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" headerView="Dh6-JV-fwc" viewBased="YES" indentationPerLevel="16" outlineTableColumn="Qow-9W-FPc" id="jc9-TQ-k33">
+                                            <rect key="frame" x="0.0" y="0.0" width="408" height="234"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <size key="intercellSpacing" width="3" height="2"/>
+                                            <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
+                                            <tableColumns>
+                                                <tableColumn width="116" minWidth="40" maxWidth="1000" id="Qow-9W-FPc">
+                                                    <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
+                                                        <font key="font" metaFont="smallSystem"/>
+                                                        <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
+                                                        <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
+                                                    </tableHeaderCell>
+                                                    <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" title="Text Cell" id="c3G-Zm-RNP">
+                                                        <font key="font" metaFont="system"/>
+                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                        <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                    </textFieldCell>
+                                                    <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                                    <prototypeCellViews>
+                                                        <tableCellView id="7Zt-rP-9iF" customClass="BRLogLineView">
+                                                            <rect key="frame" x="1" y="1" width="116" height="17"/>
+                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                            <subviews>
+                                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="7K3-C7-oJl">
+                                                                    <rect key="frame" x="-2" y="0.0" width="120" height="17"/>
+                                                                    <textFieldCell key="cell" selectable="YES" title="Multiline Label" id="Rv8-jX-NV7">
+                                                                        <font key="font" usesAppearanceFont="YES"/>
+                                                                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                                    </textFieldCell>
+                                                                </textField>
+                                                            </subviews>
+                                                            <constraints>
+                                                                <constraint firstItem="7K3-C7-oJl" firstAttribute="top" secondItem="7Zt-rP-9iF" secondAttribute="top" id="5N6-2z-a9X"/>
+                                                                <constraint firstItem="7K3-C7-oJl" firstAttribute="leading" secondItem="7Zt-rP-9iF" secondAttribute="leading" id="hXf-vw-vFI"/>
+                                                                <constraint firstAttribute="bottom" secondItem="7K3-C7-oJl" secondAttribute="bottom" id="nyL-27-Bfd"/>
+                                                                <constraint firstAttribute="trailing" secondItem="7K3-C7-oJl" secondAttribute="trailing" id="sGO-3c-64U"/>
+                                                            </constraints>
+                                                            <connections>
+                                                                <outlet property="lineLabel" destination="7K3-C7-oJl" id="j0C-zt-wSh"/>
+                                                            </connections>
+                                                        </tableCellView>
+                                                    </prototypeCellViews>
+                                                </tableColumn>
+                                            </tableColumns>
+                                        </outlineView>
+                                    </subviews>
+                                </clipView>
+                                <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="55w-hh-jnS">
+                                    <rect key="frame" x="1" y="119" width="223" height="15"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                                <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="zA9-AL-oJa">
+                                    <rect key="frame" x="224" y="17" width="15" height="102"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                                <tableHeaderView key="headerView" id="Dh6-JV-fwc">
+                                    <rect key="frame" x="0.0" y="0.0" width="408" height="25"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableHeaderView>
+                            </scrollView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="uSn-6V-p9R" firstAttribute="top" secondItem="uBh-rD-vMz" secondAttribute="top" constant="20" id="2fW-ie-AL9"/>
+                            <constraint firstItem="uSn-6V-p9R" firstAttribute="leading" secondItem="uBh-rD-vMz" secondAttribute="leading" constant="20" id="8b6-Iw-pgN"/>
+                            <constraint firstAttribute="bottom" secondItem="uSn-6V-p9R" secondAttribute="bottom" constant="20" id="GTa-75-GPP"/>
+                            <constraint firstAttribute="trailing" secondItem="uSn-6V-p9R" secondAttribute="trailing" constant="20" id="n4G-r1-Sw3"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="logOutline" destination="jc9-TQ-k33" id="7eX-PZ-aH2"/>
+                    </connections>
+                </viewController>
+                <customObject id="4Cn-cH-wkF" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-130" y="1517"/>
         </scene>
         <!--Window Controller-->
         <scene sceneID="uh9-Ob-V4L">
