--- a/Bitrise/View/Base.lproj/Main.storyboard
+++ b/Bitrise/View/Base.lproj/Main.storyboard
@@ -1297,14 +1297,14 @@
                                                     </textFieldCell>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
-                                                        <tableCellView id="7Zt-rP-9iF" customClass="BRLogLineView">
+                                                        <tableCellView identifier="BRLogLineView" misplaced="YES" id="7Zt-rP-9iF" customClass="BRLogLineView">
                                                             <rect key="frame" x="1" y="1" width="116" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="7K3-C7-oJl">
-                                                                    <rect key="frame" x="-2" y="0.0" width="120" height="17"/>
+                                                                    <rect key="frame" x="-2" y="0.0" width="120" height="18"/>
                                                                     <textFieldCell key="cell" selectable="YES" title="Multiline Label" id="Rv8-jX-NV7">
-                                                                        <font key="font" usesAppearanceFont="YES"/>
+                                                                        <font key="font" size="12" name="Menlo-Regular"/>
                                                                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
